* fix shields blocking full amount always
* items can now be modified even at max instability. But only if the config for breaking modified items is enabled.
Basically, if you enable breaking, you can modify as much as you like as long as it doesn't break, but 
if you disable breaking, the instability limit will act as the cap instead of the break chance.

3.3.6
* fix crash in map

3.3.5
* updated to newest forge
* adjusted capacitor recipes
* mobs in dungeons can now open wooden doors to haunt player, this doesnt seem to work all the time unfortunately but should add some more danger. 
* added a trapped chest for dungeons 
* added more structure block processors to accomodate some builds from the build-a-thon
* added config for auto compatible items to be salvagable
* made mobs in maps not take dmg from being stuck in wall, also they get knocked back around until they get unstuck now!
* made my dungeon gen code a bit neater. Now i can make it so certain dungeon themes can only have certain other dungeon themes!
Like i can set it so a snowy theme can't spawn together with a nether theme. This wasn't a problem when i only had stone brick and sandstone themes, but now it is.

Build-a-thon results:
* Added whole new dungeon themes you'll see often: icy spruce mansion, nature, mossy brick and mineshaft.
* Added some other dungeon themes that will be rare because there aren't enough rooms: 	tent, brick, steampunk.
* Added some dungeon rooms of existing types and some misc ones.

The leaderboard rankings and rewards will be coming soonish when i discuss things with dreckz. 


3.3.4
* fix map loot being all lvl 1
* fix painful lesson item giving a bit more than intended
* made identify tomes more expensive
3.3.3
* fix vanilla gui type and polish a bit
* can see lvl and exp in main hub now

3.3.2
* fix too high map dmg affix
3.3.1
* increased map startup cost.
* when you sleep you now get a message you're refreshed, meaning map droprate is high for you now.