@@ -2,6 +2,6 @@ package com.robertx22.mine_and_slash.database.rarities;
 
 public interface SalvagableItem {
 
-    float specialItemChance();
+    float salvageLotteryWinChance();
 
 }
