@@ -1,0 +1,17 @@
+package com.robertx22.mine_and_slash.database.rarities;
+
+import com.google.gson.JsonObject;
+import com.robertx22.mine_and_slash.onevent.data_gen.ISerializable;
+
+public class SerializedBaseRarity implements ISerializable<SerializedBaseRarity> {
+
+    @Override
+    public JsonObject toJson() {
+        return null;
+    }
+
+    @Override
+    public SerializedBaseRarity fromJson(JsonObject json) {
+        return null;
+    }
+}
