@@ -1,37 +1,0 @@
-package com.robertx22.mine_and_slash.database.stats.effects.defense;
-
-import com.robertx22.mine_and_slash.database.stats.Stat;
-import com.robertx22.mine_and_slash.database.stats.effects.base.BaseDamageEffect;
-import com.robertx22.mine_and_slash.saveclasses.ResourcesData;
-import com.robertx22.mine_and_slash.saveclasses.StatData;
-import com.robertx22.mine_and_slash.uncommon.effectdatas.DamageEffect;
-
-public class HealOnHitEffect extends BaseDamageEffect {
-
-    @Override
-    public int GetPriority() {
-        return Priority.First.priority;
-    }
-
-    @Override
-    public EffectSides Side() {
-        return EffectSides.Target;
-    }
-
-    @Override
-    public DamageEffect activate(DamageEffect effect, StatData data, Stat stat) {
-        effect.targetData.getResources()
-                .modify(new ResourcesData.Context(effect.targetData, effect.target, ResourcesData.Type.HEALTH, data.val,
-                                                  ResourcesData.Use.RESTORE
-                ));
-
-        return effect;
-    }
-
-    @Override
-    public boolean canActivate(DamageEffect effect, StatData data, Stat stat) {
-        return true;
-    }
-
-}
-
