@@ -62,10 +62,10 @@ import static net.minecraftforge.fml.common.Mod.EventBusSubscriber;
 public class MMORPG {
 
     // DISABLE WHEN PUBLIC BUILD
-    public static boolean RUN_DEV_TOOLS = true;
+    public static boolean RUN_DEV_TOOLS = false;
 
     public static boolean statEffectDebuggingEnabled() {
-        return true && RUN_DEV_TOOLS;
+        return false && RUN_DEV_TOOLS;
     }
 
     public static Logger LOGGER = Logger.getLogger(Ref.MOD_NAME);
@@ -201,6 +201,7 @@ public class MMORPG {
         CommandRegister.Register(event.getServer());
 
         SlashRegistry.checkGuidValidity();
+
         ErrorChecks.getAll()
             .forEach(x -> x.check());
         SlashRegistry.unregisterInvalidEntries();
