@@ -23,6 +23,8 @@ In short, players with elemental resists should lose their immortality this patc
 * items can now be modified even at max instability. But only if the config for breaking modified items is enabled.
 Basically, if you enable breaking, you can modify as much as you like as long as it doesn't break, but 
 if you disable breaking, the instability limit will act as the cap instead of the break chance.
+* should fix too much hunger spending, maybe it'd still be too high
+* unique gear now always has affixes and has a higher lower limit on stats.
 
 3.3.6
 * fix crash in map
